--- a/.classpath
+++ b/.classpath
@@ -1,19 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/freechart"/>
-	<classpathentry kind="lib" path="C:/Users/Scrub/workspace/Markbook/src/freechart/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Scrub/workspace/Markbook/src/freechart/jcommon-1.0.23.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Scrub/workspace/Markbook/src/freechart/jfreechart-1.0.19.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Scrub/workspace/Markbook/src/freechart/jfreechart-1.0.19-experimental.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Scrub/workspace/Markbook/src/freechart/jfreechart-1.0.19-swt.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Scrub/workspace/Markbook/src/freechart/jfreesvg-2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Scrub/workspace/Markbook/src/freechart/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Scrub/workspace/Markbook/src/freechart/orsoncharts-1.4-eval-nofx.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Scrub/workspace/Markbook/src/freechart/orsonpdf-1.6-eval.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Scrub/workspace/Markbook/src/freechart/servlet.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Scrub/workspace/Markbook/src/freechart/swtgraphics2d.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
